# MaNGOS is a full featured server for World of Warcraft, supporting
# the following clients: 1.12.x, 2.4.3, 3.3.5a, 4.3.4a and 5.4.8
#
# Copyright (C) 2005-2019  MaNGOS project <https://getmangos.eu>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

set(LIBRARY_SRCS
    AuctionHouseBot/ahbot.conf.dist.in
    AuctionHouseBot/AuctionHouseBot.cpp
    AuctionHouseBot/AuctionHouseBot.h
    BattleGround/BattleGround.cpp
    BattleGround/BattleGround.h
    BattleGround/BattleGroundAB.cpp
    BattleGround/BattleGroundAB.h
    BattleGround/BattleGroundAV.cpp
    BattleGround/BattleGroundAV.h
    BattleGround/BattleGroundHandler.cpp
    BattleGround/BattleGroundMgr.cpp
    BattleGround/BattleGroundMgr.h
    BattleGround/BattleGroundWS.cpp
    BattleGround/BattleGroundWS.h
    ChatCommands/debugcmds.cpp
    ChatCommands/Level0.cpp
    ChatCommands/Level1.cpp
    ChatCommands/Level2.cpp
    ChatCommands/Level3.cpp
    ChatCommands/Level4.cpp
    Maps/MapUpdater.cpp
    Maps/MapUpdater.h
    MotionGenerators/ConfusedMovementGenerator.cpp
    MotionGenerators/ConfusedMovementGenerator.h
    MotionGenerators/FleeingMovementGenerator.cpp
    MotionGenerators/FleeingMovementGenerator.h
    MotionGenerators/HomeMovementGenerator.cpp
    MotionGenerators/HomeMovementGenerator.h
    MotionGenerators/IdleMovementGenerator.cpp
    MotionGenerators/IdleMovementGenerator.h
    MotionGenerators/MotionMaster.cpp
    MotionGenerators/MotionMaster.h
    MotionGenerators/MovementGenerator.cpp
    MotionGenerators/MovementGenerator.h
    MotionGenerators/PathFinder.cpp
    MotionGenerators/PathFinder.h
    MotionGenerators/PointMovementGenerator.cpp
    MotionGenerators/PointMovementGenerator.h
    MotionGenerators/RandomMovementGenerator.cpp
    MotionGenerators/RandomMovementGenerator.h
    MotionGenerators/TargetedMovementGenerator.cpp
    MotionGenerators/TargetedMovementGenerator.h
    MotionGenerators/WaypointMovementGenerator.cpp
    MotionGenerators/WaypointMovementGenerator.h
    movement/MoveSpline.cpp
    movement/MoveSpline.h
    movement/MoveSplineFlag.h
    movement/MoveSplineInit.cpp
    movement/MoveSplineInit.h
    movement/MoveSplineInitArgs.h
    movement/packet_builder.cpp
    movement/packet_builder.h
    movement/spline.cpp
    movement/spline.h
    movement/spline.impl.h
    movement/typedefs.h
    movement/util.cpp
    Object/AggressorAI.cpp
    Object/AggressorAI.h
    Object/AuctionHouseMgr.cpp
    Object/AuctionHouseMgr.h
    Object/Bag.cpp
    Object/Bag.h
    Object/Camera.cpp
    Object/Camera.h
    Object/Corpse.cpp
    Object/Corpse.h
    Object/Creature.cpp
    Object/Creature.h
    Object/CreatureAI.cpp
    Object/CreatureAI.h
    Object/CreatureAIImpl.h
    Object/CreatureAIRegistry.cpp
    Object/CreatureAIRegistry.h
    Object/CreatureAISelector.cpp
    Object/CreatureAISelector.h
    Object/CreatureEventAI.cpp
    Object/CreatureEventAI.h
    Object/CreatureEventAIMgr.cpp
    Object/CreatureEventAIMgr.h
    Object/DynamicObject.cpp
    Object/DynamicObject.h
    Object/Formulas.h
    Object/GameObject.cpp
    Object/GameObject.h
    Object/GMTicketMgr.cpp
    Object/GMTicketMgr.h
    Object/GuardAI.cpp
    Object/GuardAI.h
    Object/Guild.cpp
    Object/Guild.h
    Object/Item.cpp
    Object/Item.h
    Object/ItemEnchantmentMgr.cpp
    Object/ItemEnchantmentMgr.h
    Object/ItemPrototype.h
    Object/LootMgr.cpp
    Object/LootMgr.h
    Object/NullCreatureAI.cpp
    Object/NullCreatureAI.h
    Object/Object.cpp
    Object/Object.h
    Object/ObjectAccessor.cpp
    Object/ObjectAccessor.h
    Object/ObjectGuid.cpp
    Object/ObjectGuid.h
    Object/ObjectMgr.cpp
    Object/ObjectMgr.h
    Object/ObjectPosSelector.cpp
    Object/ObjectPosSelector.h
    Object/Pet.cpp
    Object/Pet.h
    Object/PetAI.cpp
    Object/PetAI.h
    Object/Player.cpp
    Object/Player.h
    Object/PlayerLogger.cpp
    Object/PlayerLogger.h
    Object/ReactorAI.cpp
    Object/ReactorAI.h
    Object/ReputationMgr.cpp
    Object/ReputationMgr.h
    Object/SocialMgr.cpp
    Object/SocialMgr.h
    Object/SpellMgr.cpp
    Object/SpellMgr.h
    Object/StatSystem.cpp
    Object/TemporarySummon.cpp
    Object/TemporarySummon.h
    Object/Totem.cpp
    Object/Totem.h
    Object/TotemAI.cpp
    Object/TotemAI.h
    Object/Unit.cpp
    Object/Unit.h
    Object/UnitEvents.h
    Object/UpdateFields.h
    Object/UpdateMask.h
    OutdoorPvP/OutdoorPvP.cpp
    OutdoorPvP/OutdoorPvP.h
    OutdoorPvP/OutdoorPvPEP.cpp
    OutdoorPvP/OutdoorPvPEP.h
    OutdoorPvP/OutdoorPvPMgr.cpp
    OutdoorPvP/OutdoorPvPMgr.h
    OutdoorPvP/OutdoorPvPSI.cpp
    OutdoorPvP/OutdoorPvPSI.h
    References/FollowerReference.cpp
    References/FollowerReference.h
    References/FollowerRefManager.h
    References/GroupReference.cpp
    References/GroupReference.h
    References/GroupRefManager.h
    References/HostileRefManager.cpp
    References/HostileRefManager.h
    References/MapReference.h
    References/MapRefManager.h
    References/ThreatManager.cpp
    References/ThreatManager.h
    Server/DBCEnums.h
    Server/DBCfmt.h
    Server/DBCStores.cpp
    Server/DBCStores.h
    Server/DBCStructure.h
    Server/Opcodes.cpp
    Server/Opcodes.h
    Server/SharedDefines.h
    Server/SQLStorages.cpp
    Server/SQLStorages.h
    Server/WorldSession.cpp
    Server/WorldSession.h
    Server/WorldSocket.cpp
    Server/WorldSocket.h
    Server/WorldSocketMgr.cpp
    Server/WorldSocketMgr.h
    Tools/CharacterDatabaseCleaner.cpp
    Tools/CharacterDatabaseCleaner.h
    Tools/Language.h
    Tools/PlayerDump.cpp
    Tools/PlayerDump.h
    vmap/BIH.cpp
    vmap/BIH.h
    vmap/BIHWrap.h
    vmap/DynamicTree.cpp
    vmap/DynamicTree.h
    vmap/GameObjectModel.cpp
    vmap/GameObjectModel.h
    vmap/IVMapManager.h
    vmap/MapTree.cpp
    vmap/MapTree.h
    vmap/ModelInstance.cpp
    vmap/ModelInstance.h
    vmap/RegularGrid.h
    vmap/TileAssembler.cpp
    vmap/TileAssembler.h
    vmap/VMapDefinitions.h
    vmap/VMapFactory.cpp
    vmap/VMapFactory.h
    vmap/VMapManager2.cpp
    vmap/VMapManager2.h
    vmap/WorldModel.cpp
    vmap/WorldModel.h
    Warden/Modules/WardenModuleMac.h
    Warden/Modules/WardenModuleWin.h
    Warden/Warden.cpp
    Warden/Warden.h
    Warden/WardenCheckMgr.cpp
    Warden/WardenCheckMgr.h
    Warden/WardenMac.cpp
    Warden/WardenMac.h
    Warden/WardenWin.cpp
    Warden/WardenWin.h
    WorldHandlers/AccountMgr.cpp
    WorldHandlers/AccountMgr.h
    WorldHandlers/AddonHandler.cpp
    WorldHandlers/AddonHandler.h
    WorldHandlers/AuctionHouseHandler.cpp
    WorldHandlers/Cell.h
    WorldHandlers/CellImpl.h
    WorldHandlers/Channel.cpp
    WorldHandlers/Channel.h
    WorldHandlers/ChannelHandler.cpp
    WorldHandlers/ChannelMgr.cpp
    WorldHandlers/ChannelMgr.h
    WorldHandlers/CharacterHandler.cpp
    WorldHandlers/Chat.cpp
    WorldHandlers/Chat.h
    WorldHandlers/ChatHandler.cpp
    WorldHandlers/CombatHandler.cpp
    WorldHandlers/CreatureLinkingMgr.cpp
    WorldHandlers/CreatureLinkingMgr.h
    WorldHandlers/DisableMgr.cpp
    WorldHandlers/DisableMgr.h
    WorldHandlers/DuelHandler.cpp
    WorldHandlers/GameEventMgr.cpp
    WorldHandlers/GameEventMgr.h
    WorldHandlers/GMTicketHandler.cpp
    WorldHandlers/GossipDef.cpp
    WorldHandlers/GossipDef.h
    WorldHandlers/GridDefines.h
    WorldHandlers/GridMap.cpp
    WorldHandlers/GridMap.h
    WorldHandlers/GridNotifiers.cpp
    WorldHandlers/GridNotifiers.h
    WorldHandlers/GridNotifiersImpl.h
    WorldHandlers/GridStates.cpp
    WorldHandlers/GridStates.h
    WorldHandlers/Group.cpp
    WorldHandlers/Group.h
    WorldHandlers/GroupHandler.cpp
    WorldHandlers/GuildHandler.cpp
    WorldHandlers/GuildMgr.cpp
    WorldHandlers/GuildMgr.h
    WorldHandlers/InstanceData.cpp
    WorldHandlers/InstanceData.h
    WorldHandlers/ItemHandler.cpp
    WorldHandlers/LFGHandler.cpp
    WorldHandlers/LFGHandler.h
    WorldHandlers/LFGMgr.cpp
    WorldHandlers/LFGMgr.h
    WorldHandlers/LootHandler.cpp
    WorldHandlers/Mail.cpp
    WorldHandlers/Mail.h
    WorldHandlers/MailHandler.cpp
    WorldHandlers/Map.cpp
    WorldHandlers/Map.h
    WorldHandlers/MapManager.cpp
    WorldHandlers/MapManager.h
    WorldHandlers/MapPersistentStateMgr.cpp
    WorldHandlers/MapPersistentStateMgr.h
    WorldHandlers/MassMailMgr.cpp
    WorldHandlers/MassMailMgr.h
    WorldHandlers/MiscHandler.cpp
    WorldHandlers/MoveMap.cpp
    WorldHandlers/MoveMap.h
    WorldHandlers/MoveMapSharedDefines.h
    WorldHandlers/MovementGeneratorImpl.h
    WorldHandlers/MovementHandler.cpp
    WorldHandlers/NPCHandler.cpp
    WorldHandlers/NPCHandler.h
    WorldHandlers/ObjectGridLoader.cpp
    WorldHandlers/ObjectGridLoader.h
    WorldHandlers/Path.h
    WorldHandlers/PetHandler.cpp
    WorldHandlers/PetitionsHandler.cpp
    WorldHandlers/PoolManager.cpp
    WorldHandlers/PoolManager.h
    WorldHandlers/QueryHandler.cpp
    WorldHandlers/QuestDef.cpp
    WorldHandlers/QuestDef.h
    WorldHandlers/QuestHandler.cpp
    WorldHandlers/ScriptMgr.cpp
    WorldHandlers/ScriptMgr.h
    WorldHandlers/SkillHandler.cpp
    WorldHandlers/Spell.cpp
    WorldHandlers/Spell.h
    WorldHandlers/SpellAuraDefines.h
    WorldHandlers/SpellAuras.cpp
    WorldHandlers/SpellAuras.h
    WorldHandlers/SpellEffects.cpp
    WorldHandlers/SpellHandler.cpp
    WorldHandlers/TaxiHandler.cpp
    WorldHandlers/TradeHandler.cpp
    WorldHandlers/Transports.cpp
    WorldHandlers/Transports.h
    WorldHandlers/UnitAuraProcHandler.cpp
    WorldHandlers/UpdateData.cpp
    WorldHandlers/UpdateData.h
    WorldHandlers/WaypointManager.cpp
    WorldHandlers/WaypointManager.h
    WorldHandlers/Weather.cpp
    WorldHandlers/Weather.h
    WorldHandlers/World.cpp
    WorldHandlers/World.h
    pchdef.cpp
    pchdef.h
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${LIBRARY_SRCS})

add_library(game STATIC ${LIBRARY_SRCS})

target_include_directories(game
    PUBLIC
	    ${CMAKE_CURRENT_SOURCE_DIR}
	    AuctionHouseBot
        BattleGround
        ChatCommands
        Maps
        MotionGenerators
        movement
        Object
        OutdoorPvP
        References
        Server
        Tools
        vmap
        Warden
        Warden/Modules
        WorldHandlers
)

target_compile_definitions(game
    PUBLIC
	    CLASSIC
        $<$<BOOL:${SOAP}>:ENABLE_SOAP>
        $<$<BOOL:${SCRIPT_LIB_SD3}>:ENABLE_SD3>
        $<$<BOOL:${PLAYERBOTS}>:ENABLE_PLAYERBOTS>
        $<$<BOOL:${SCRIPT_LIB_ELUNA}>:ENABLE_ELUNA>
)		

# Generate precompiled header
if(PCH)
    ADD_CXX_PCH(game ${CMAKE_CURRENT_SOURCE_DIR}/pchdef.h ${CMAKE_CURRENT_SOURCE_DIR}/pchdef.cpp)
endif()

# we don't link eluna and playerbot explicitely here because of circular dependencies
# we use INTERFACE version for them to get access transitively to header files
# the real libraries must be linked into mangosd/realmd

target_link_libraries(game
    PUBLIC
	    share
		detour
		g3dlite
        #$<$<BOOL:${SOAP}>:gsoap>
        $<$<BOOL:${SCRIPT_LIB_SD3}>:mangosscript>
        $<$<BOOL:${PLAYERBOTS}>:BotsIntf>
        $<$<BOOL:${SCRIPT_LIB_ELUNA}>:ElunaIntf>
		$<$<BOOL:${SCRIPT_LIB_ELUNA}>:lualib>
)

#AH Bot Config
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/AuctionHouseBot/ahbot.conf.dist.in" "${CMAKE_CURRENT_BINARY_DIR}/AuctionHouseBot/ahbot.conf.dist")
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/AuctionHouseBot/ahbot.conf.dist" DESTINATION "${CONF_INSTALL_DIR}")
